@@ -335,7 +335,7 @@ public class HtmlTableRendererBase extends HtmlRenderer
             bodyrows = new Integer[bodyrowsString.length];
             for(int i = 0; i < bodyrowsString.length; i++) 
             {
-                bodyrows[i] = new Integer(bodyrowsString[i]);
+                bodyrows[i] = Integer.valueOf(bodyrowsString[i]);
             }
             
         }
@@ -1128,7 +1128,7 @@ public class HtmlTableRendererBase extends HtmlRenderer
         // Only render colspan if is > 0
         if (totalColumns > 0)
         {
-            writer.writeAttribute(HTML.COLSPAN_ATTR, new Integer(totalColumns), null);
+            writer.writeAttribute(HTML.COLSPAN_ATTR, Integer.valueOf(totalColumns), null);
         }
         if (styleClass != null)
         {
@@ -1298,7 +1298,7 @@ public class HtmlTableRendererBase extends HtmlRenderer
         writer.startElement(determineHeaderCellTag(facesContext, uiComponent.getParent()), null); // uiComponent);
         if (colspan > 1)
         {
-            writer.writeAttribute(HTML.COLSPAN_ATTR, new Integer(colspan), null);
+            writer.writeAttribute(HTML.COLSPAN_ATTR, Integer.valueOf(colspan), null);
         }
         if (headerStyleClass != null)
         {
@@ -1353,7 +1353,7 @@ public class HtmlTableRendererBase extends HtmlRenderer
         writer.startElement(HTML.TD_ELEM, null); // uiComponent);
         if (colspan > 1)
         {
-            writer.writeAttribute(HTML.COLSPAN_ATTR, new Integer(colspan), null);
+            writer.writeAttribute(HTML.COLSPAN_ATTR, Integer.valueOf(colspan), null);
         }
         if (footerStyleClass != null)
         {
